fix gap in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,7 @@ margin-left: 3px;
     font-size: 14px;
     position: absolute;
     bottom: 0px;
+    left: 0px;
     width: 100%;
     background-color:#f2f2f2;
     line-height: 40px;
